--- a/Codegym/Bài 8/Tính điểm đại học.html
+++ b/Codegym/Bài 8/Tính điểm đại học.html
@@ -7,18 +7,44 @@
 </head>
 <body>
     <h1>Tính điểm DH khối D</h1>
-    <table>
+    <table style="width: 200px;">
         <tr>
             <td>Môn Toán</td>
             <td><input type="text" style="max-width: 75px;"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
         </tr>
         <tr>
             <td>Môn Văn</td>
             <td><input type="text" style="max-width: 75px;"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
         </tr>
         <tr>
             <td>Môn Anh</td>
             <td><input type="text" style="max-width: 75px;"></td>
+        </tr>
+        <tr>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+        </tr>       
+         <tr>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
         </tr>
         <tr>
             <td>Khu vực</td>
@@ -32,7 +58,8 @@
         </td>
         </tr>
     </table>
-
+    </br>
+    </br>
     <button>Tính Điểm</button>
 
 </html>
