--- a/Codegym/Bài 12/Yasuo baka.html
+++ b/Codegym/Bài 12/Yasuo baka.html
@@ -16,13 +16,13 @@
         
         if (c % 2 != 0) {
             d = 1;
-            alert('Thừa một Trai')
+            document.write('Thừa một Trai');
         } else {d = 0}
 
         e = (c - d)/2;
 
-        document.getElementById('input').innerText = a + ' ' + b;
-        document.getElementById('kq').innerText = a + ' ' + e;
+        document.getElementById('input').innerText = 'Gái ' + a + ' ' + 'Trai ' + b;
+        document.getElementById('kq').innerText = 'Cặp đôi ' + a + ' ' + 'Cặp trai ' + e;
 
     </script>
 </body>
