--- a/Codegym/Bài 12/Yasuo baka.html
+++ b/Codegym/Bài 12/Yasuo baka.html
@@ -18,7 +18,7 @@
         
         if (c % 2 != 0) {
             d = 1;
-            document.write('Thừa một Trai');
+            document.write('Một người chơi solo');
         } else {d = 0}
 
         e = (c - d)/2;
@@ -32,7 +32,7 @@
         
         if (c % 2 != 0) {
             d = 1;
-            document.write('Thừa một Gái');
+            document.write('Một người chơi solo');
         } else {d = 0}
 
         e = (c - d)/2;
