--- a/Codegym/Bài 12/Số chính phương.html
+++ b/Codegym/Bài 12/Số chính phương.html
@@ -27,6 +27,9 @@
             }
         }
 
+        //Tìm kiếm câu lệnh làm tròn
+        //Tìm kiếm câu lệnh căn
+
     </script>
 </body>
 </html>
